修正并增加内容 - 修改核心和游戏加载机制 - 能够依据核心情况判断文件后缀，避免选择错误的文件 - 能够检测核心加载情况，加载失败给予提示，不会再崩溃游戏了 - 修改退出窗口，改为 Minecraft 原生窗口 - 增加暂停机制，在弹出退出窗口时，后台视频和音频不再播放